# agentic_vs_vanilla_rag

./: README.md  app.py  main.py  pyproject.toml
chroma_db/b558d1d8-43d7-49a0-94f8-80f929d6bd34/: index_metadata.pickle
src/: agentic_rag.py  ingest.py  prompts.py  scrape.py  vanilla_rag.py
